--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "emittery": "^1.1.0",
+    "multiformats": "^13.3.2",
     "yamux-js": "^0.2.0"
   },
   "peerDependencies": {
