--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "cbor2": "^1.12.0",
     "valibot": "^1.0.0"
   },
+  "files": [
+    "dist"
+  ],
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
